syntax = "proto3";

package example.v1;

message MessageA {
  string field_a = 1;
}

message MessageB {
  string field_a = 1;
  int64 field_b = 2;
}

message MessageC {
  int64 field_b = 2;
}

message Empty {}

service ExampleService {
  rpc RequestA(MessageA) returns (Empty) {}
  rpc RequestB(MessageB) returns (Empty) {}
  rpc RequestC(MessageC) returns (Empty) {}
}

